Fixed the spacing between date modified and the date in the GC Web Usability and Intranet themes.

--- a/src/theme-gcwu-fegc/sass/includes/_default.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default.scss
@@ -128,7 +128,7 @@
 		float: left;
 	}
 	dd {
-		margin: 0 0 0 10px;
+		margin: 0 0 0 0.39em;
 	}
 }
 
